--- a/src/Components/Project.css
+++ b/src/Components/Project.css
@@ -44,7 +44,9 @@ button{
   .card{
     width: 600px;
     height: auto;
-    margin: 0px;
+    margin-left:0 ;
+    margin-right:0;
+    margin-bottom: 20px;
   }
 }
 
