--- a/src/Components/Experience.css
+++ b/src/Components/Experience.css
@@ -1,5 +1,6 @@
 .experience{
     align-items: center;
+    justify-content: center;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -17,12 +18,12 @@
     transition: transform 0.2s;
   }
   .exp-card:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
 
 .card-img {
     width: 100%;
-    height: 40%;
+    height: 35%;
   }
   
   .card-content {
@@ -40,9 +41,10 @@
     font-size: 18px;
   }
   
-  .card-text {
+  .text {
     margin-bottom: 20px;
     font-size: 16px;
+    text-align: center;
   }
 
 
