--- a/src/Components/Project.css
+++ b/src/Components/Project.css
@@ -14,7 +14,7 @@
   margin-bottom: 100px;
   overflow: hidden;
   width:350px;
-  height: 620px;
+  height: 700px;
   display: inline-block; 
   transition: transform 0.2s;
 }
@@ -53,6 +53,32 @@ bottom: 0px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   padding: 0.2px;
   margin-bottom: 10px;
+}
+
+.contents .icons img{
+  margin: 8px;
+  width: 35px;
+}
+
+.icons .icon-text{
+  visibility: hidden;
+  font-size: 10px;
+  width: auto;
+  background-color: rgb(255, 0, 115);
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  top: 90%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
+.icons:hover .icon-text {
+  visibility: visible;
 }
 
 @media only screen and (max-width: 600px){
