--- a/src/Components/Project.css
+++ b/src/Components/Project.css
@@ -135,14 +135,15 @@
 
 @media only screen and (max-width: 600px){
   .card{
-    width: 300px;
+    width: 100%;
+    margin-left: -10px;
+    margin-right: -10px;
     height: auto;
     margin-bottom: 30px;
   }
   .Info-2{
-    padding-left: 10px;
-    padding-right: 10px;
-  }
+    padding: 1rem; 
+   }
   .Info-2 h1{
     text-align: center;
   }
