--- a/src/Components/Technology.css
+++ b/src/Components/Technology.css
@@ -132,7 +132,7 @@ ul.time-line.li::before{
   height: 100%;
   background-color: #00ffb3;
   position: absolute;
-  top: 0;
+  top: 40px;
   left: 11px;
   transform: translateX(-50%);
 }
@@ -151,7 +151,7 @@ ul.time-line.li::before{
   background:transparent;
   position: relative;
   margin-left: 30px;
-  margin-top: 20px;
+  margin-top: 60px;
   border-radius: 5px; 
   transition: transform 0.2s;
 }
@@ -234,6 +234,7 @@ transform: scale(1.02);
   }
   small{
     display: block;
+    margin-left: 80px;
   }
   .timeline-item h3{
     display: block;
